--- a/pom.xml
+++ b/pom.xml
@@ -207,7 +207,7 @@
 
 		<!-- <dependency> <groupId>com.github.detro</groupId> <artifactId>ghostdriver</artifactId> 
 			<version>2.1.0</version> </dependency> -->
-		<!-- add by mjw -->
+		<!-- start by mjw -->
 <!-- 		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
@@ -218,7 +218,28 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>4.2.0.Final</version>
 		</dependency>
-		<!-- add by mjw -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.4.4</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.4.4</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.4.4</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.json-lib</groupId>
+			<artifactId>json-lib</artifactId>
+			<version>2.4</version>
+			<classifier>jdk15</classifier>
+		</dependency>
+		<!-- end by mjw -->
 		<dependency>
 			<groupId>org.apache.bval</groupId>
 			<artifactId>bval-jsr303</artifactId>
@@ -229,7 +250,6 @@
 			<artifactId>phantomjsdriver</artifactId>
 			<version>1.1.0</version>
 		</dependency>
-		<!-- add by mjw -->
 		<!-- https://mvnrepository.com/artifact/cn.wanghaomiao/JsoupXpath -->
 		<dependency>
 			<groupId>cn.wanghaomiao</groupId>
