--- a/pom.xml
+++ b/pom.xml
@@ -56,8 +56,31 @@
 					</webResources>
 				</configuration>
 			</plugin>
-
 		</plugins>
+		
+		<!-- statrt by mjw -->
+		<!-- <plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.1.1</version>
+				<configuration>
+					<packagingExcludes>WEB-INF/web.xml</packagingExcludes>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+		</plugins> -->
+		<!-- end by mjw -->
+		
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
@@ -221,17 +244,17 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
-			<version>2.4.4</version>
+			<version>2.9.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.4.4</version>
+			<version>2.9.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
-			<version>2.4.4</version>
+			<version>2.9.2</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.json-lib</groupId>
@@ -272,7 +295,24 @@
 			<artifactId>jbrowserdriver</artifactId>
 			<version>0.17.9</version>
 		</dependency>
-
+		
+		<!-- satrt by mjw -->
+		<dependency>
+			<groupId>aliyun-java-sdk1</groupId>
+			<artifactId>aliyun-java-sdk1</artifactId>
+			<version>1.0.1</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/aliyun-java-sdk-core-3.2.3.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>aliyun-java-sdk</groupId>
+			<artifactId>aliyun-java-sdk</artifactId>
+			<version>1.0.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/aliyun-java-sdk-dysmsapi-1.0.0-SANPSHOT.jar</systemPath>
+		</dependency>
+		<!-- end by mjw -->
+		
 	</dependencies>
 
 	<repositories>
