--- a/pom.xml
+++ b/pom.xml
@@ -22,42 +22,17 @@
 	<version>1.0</version>
 
 	<build>
-		<!-- <plugins>
-			<plugin>
-				<groupId>org.mortbay.jetty</groupId>
-				<artifactId>maven-jetty-plugin</artifactId>
-				<version>6.1.7</version>
-				<configuration>
-					<connectors>
-						<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
-							<port>8888</port>
-							<maxIdleTime>30000</maxIdleTime>
-						</connector>
-					</connectors>
-					<webAppSourceDirectory>${project.build.directory}/${pom.artifactId}-${pom.version}</webAppSourceDirectory>
-					<contextPath>/</contextPath>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-war-plugin</artifactId>
-				<version>2.5</version>
-				<configuration>
-					<warName>${project.artifactId}</warName>
-					<webResources>
-						<resource>
-							<directory>src/main/webapp</directory>
-							<includes>
-								<include>*.xml</include>
-								<include>**/*.xml</include>
-							</includes>
-							<filtering>true</filtering>
-						</resource>
-					</webResources>
-				</configuration>
-			</plugin>
-		</plugins> -->
-		
+		<!-- <plugins> <plugin> <groupId>org.mortbay.jetty</groupId> <artifactId>maven-jetty-plugin</artifactId> 
+			<version>6.1.7</version> <configuration> <connectors> <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector"> 
+			<port>8888</port> <maxIdleTime>30000</maxIdleTime> </connector> </connectors> 
+			<webAppSourceDirectory>${project.build.directory}/${pom.artifactId}-${pom.version}</webAppSourceDirectory> 
+			<contextPath>/</contextPath> </configuration> </plugin> <plugin> <groupId>org.apache.maven.plugins</groupId> 
+			<artifactId>maven-war-plugin</artifactId> <version>2.5</version> <configuration> 
+			<warName>${project.artifactId}</warName> <webResources> <resource> <directory>src/main/webapp</directory> 
+			<includes> <include>*.xml</include> <include>**/*.xml</include> </includes> 
+			<filtering>true</filtering> </resource> </webResources> </configuration> 
+			</plugin> </plugins> -->
+
 		<!-- statrt by mjw -->
 		<plugins>
 			<plugin>
@@ -80,7 +55,7 @@
 			</plugin>
 		</plugins>
 		<!-- end by mjw -->
-		
+
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
@@ -231,11 +206,8 @@
 		<!-- <dependency> <groupId>com.github.detro</groupId> <artifactId>ghostdriver</artifactId> 
 			<version>2.1.0</version> </dependency> -->
 		<!-- start by mjw -->
-<!-- 		<dependency>
-			<groupId>javax.validation</groupId>
-			<artifactId>validation-api</artifactId>
-			<version>1.1.0.Final</version>
-		</dependency> -->
+		<!-- <dependency> <groupId>javax.validation</groupId> <artifactId>validation-api</artifactId> 
+			<version>1.1.0.Final</version> </dependency> -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
@@ -295,7 +267,7 @@
 			<artifactId>jbrowserdriver</artifactId>
 			<version>0.17.9</version>
 		</dependency>
-		
+
 		<!-- satrt by mjw -->
 		<dependency>
 			<groupId>aliyun-java-sdk1</groupId>
@@ -311,8 +283,19 @@
 			<scope>system</scope>
 			<systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/aliyun-java-sdk-dysmsapi-1.0.0-SANPSHOT.jar</systemPath>
 		</dependency>
+
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.2.1</version>
+		</dependency>
 		<!-- end by mjw -->
-		
+
 	</dependencies>
 
 	<repositories>
