--- a/pom.xml
+++ b/pom.xml
@@ -294,6 +294,24 @@
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.2.1</version>
 		</dependency>
+
+<!-- 		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20140107</version>
+		</dependency> -->
+
+		<dependency>
+			<groupId>org.webjars.bower</groupId>
+			<artifactId>ueditor</artifactId>
+			<version>1.4.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.9</version>
+		</dependency>
 		<!-- end by mjw -->
 
 	</dependencies>
